# implicit-neural-representation

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA_EXPLAINED.md  NETWORK_EXPLAINED.md  POSITIONAL_ENCODING_EXPLAINED.md  README.md  config.py  pyproject.toml
.cursor/rules/: python-coding-rules.mdc
src/: __init__.py
src/inr/: __init__.py  data.py  network.py  positional_encoding.py  train.py
tests/: test_data.py  test_network.py  test_positional_encoding.py  test_train.py
